[gd_scene load_steps=31 format=3 uid="uid://bbpq55dk3sp3i"]

[ext_resource type="PackedScene" uid="uid://b0a8orntj7ch5" path="res://Characters/Enemies/enemy.tscn" id="1_g57e6"]
[ext_resource type="Texture2D" uid="uid://2woqp1ev4vkw" path="res://Assets/MechaAssets/progress bar.png" id="2_jyahs"]
[ext_resource type="Texture2D" uid="uid://bkcbawqqlnjkj" path="res://Characters/Enemies/gj_mech_boss_aim_01-Sheet.png" id="2_om5vy"]
[ext_resource type="Script" path="res://Characters/Enemies/electric_boss.gd" id="2_v4my4"]
[ext_resource type="Script" path="res://Characters/Enemies/MagmodiasFSM.gd" id="3_0klny"]
[ext_resource type="Script" path="res://Characters/Enemies/EBPathTimer.gd" id="6_cthjp"]
[ext_resource type="Texture2D" uid="uid://d30rmwdcntnmi" path="res://Assets/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_spritesheet.png" id="6_jj4wp"]
[ext_resource type="PackedScene" uid="uid://cxm08ykc6mprh" path="res://EBossOrb.tscn" id="8_f05gd"]
[ext_resource type="Texture2D" uid="uid://dqs80hl8ji7dc" path="res://Assets/MechaAssets/NicePng_sprite-png_6580772-removebg-preview.png" id="9_pi2ss"]
[ext_resource type="Script" path="res://hitbox.gd" id="9_wi67f"]

[sub_resource type="Animation" id="Animation_qubqp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_impq1"]
resource_name = "explosion"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_uu5ix"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_jr7wi"]
resource_name = "idle"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_imdu1"]
resource_name = "move"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u51ff"]
_data = {
"RESET": SubResource("Animation_qubqp"),
"explosion": SubResource("Animation_impq1"),
"hurt": SubResource("Animation_uu5ix"),
"idle": SubResource("Animation_jr7wi"),
"move": SubResource("Animation_imdu1")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_6o4kb"]
atlas = ExtResource("2_om5vy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bi6q"]
atlas = ExtResource("2_om5vy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e0do"]
atlas = ExtResource("2_om5vy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsowc"]
atlas = ExtResource("2_om5vy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggfc5"]
atlas = ExtResource("2_om5vy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf30q"]
atlas = ExtResource("2_om5vy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1mhq"]
atlas = ExtResource("2_om5vy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndxld"]
atlas = ExtResource("2_om5vy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e23do"]
atlas = ExtResource("6_jj4wp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7rm1"]
atlas = ExtResource("6_jj4wp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ii6u"]
atlas = ExtResource("6_jj4wp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4mhy"]
atlas = ExtResource("6_jj4wp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qh6d3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o4kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bi6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e0do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsowc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggfc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf30q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1mhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndxld")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e23do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7rm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ii6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4mhy")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qjfnt"]
radius = 84.5033

[node name="ElectricBoss" instance=ExtResource("1_g57e6")]
z_index = 1
scale = Vector2(4, 4)
script = ExtResource("2_v4my4")
projectile_speed = null
hp = 100
acceleration = 3
max_speed = 25

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

[node name="Boss Healthbar" type="Control" parent="CanvasLayer" index="0"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -7.0
offset_right = 482.0
offset_bottom = 33.0
metadata/_edit_group_ = true

[node name="Background" type="TextureProgressBar" parent="CanvasLayer/Boss Healthbar" index="0"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = 15.0
offset_right = -117.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 1)
value = 100.0
texture_progress = ExtResource("2_jyahs")

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/Boss Healthbar" index="1"]
modulate = Color(0.772549, 0, 0.0901961, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = 15.0
offset_right = -117.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 1)
value = 100.0
texture_progress = ExtResource("2_jyahs")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Boss Healthbar" index="2"]
modulate = Color(0.945098, 0.847059, 0.45098, 1)
layout_mode = 0
offset_top = 13.0
offset_right = 478.0
offset_bottom = 40.0
bbcode_enabled = true
text = "[center] Magmordias  [/center]"

[node name="FiniteStateMachine" parent="." index="1"]
script = ExtResource("3_0klny")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_u51ff")
}

[node name="AnimatedSprite2D" parent="." index="3"]
position = Vector2(0, 8.2)
sprite_frames = SubResource("SpriteFrames_qh6d3")

[node name="CollisionPolygon2D" parent="." index="4"]
polygon = PackedVector2Array(-4, 28.75, -2.5, 24.5, 3, 24.5, 4.25, 29, 7.25, 22.25, 13.25, 27, 23.25, 20, 21.5, 11.25, 14, 7.25, 6, 8.5, 9, 3.5, 7.5, -0.25, 11.75, -4, 9, -11.5, 5.5, -5, 0, -6.75, -4.5, -4.5, -8, -11.5, -11.5, -6.25, -8, 1.25, -7.75, 6.25, -6, 8.5, -15.25, 8, -23, 14.5, -22.25, 22.75, -18, 22.75, -17, 26, -6.75, 24.5)

[node name="PathTimer" parent="." index="5"]
script = ExtResource("6_cthjp")

[node name="RigidBody2D" type="RigidBody2D" parent="." index="7"]
z_as_relative = false
scale = Vector2(0.5, 0.5)
gravity_scale = 0.0

[node name="Hitbox" type="Area2D" parent="RigidBody2D" index="0"]
scale = Vector2(2, 2)
collision_mask = 3
script = ExtResource("9_wi67f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Hitbox" index="0"]
position = Vector2(1, 16)
shape = SubResource("CircleShape2D_qjfnt")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D" index="1"]
position = Vector2(2, 205.5)
texture = ExtResource("9_pi2ss")

[node name="Orb5" parent="." index="8" instance=ExtResource("8_f05gd")]
position = Vector2(-80.75, 91)

[node name="Orb8" parent="." index="9" instance=ExtResource("8_f05gd")]
position = Vector2(-112.25, 38)

[node name="Orb9" parent="." index="10" instance=ExtResource("8_f05gd")]
position = Vector2(109.5, 42.25)

[node name="Orb6" parent="." index="11" instance=ExtResource("8_f05gd")]
position = Vector2(75, 92.5)

[node name="Orb7" parent="." index="12" instance=ExtResource("8_f05gd")]
position = Vector2(-0.5, 119.5)

[node name="Orb10" parent="." index="13" instance=ExtResource("8_f05gd")]
position = Vector2(-68.5, -80.25)

[node name="Orb11" parent="." index="14" instance=ExtResource("8_f05gd")]
position = Vector2(-109.75, -24)

[node name="Orb12" parent="." index="15" instance=ExtResource("8_f05gd")]
position = Vector2(110.5, -22.25)

[node name="Orb13" parent="." index="16" instance=ExtResource("8_f05gd")]
position = Vector2(63.75, -79.25)

[node name="Orb14" parent="." index="17" instance=ExtResource("8_f05gd")]
position = Vector2(0, -102.75)

[connection signal="hp_changed" from="." to="." method="_on_hp_changed"]
[connection signal="path_timer" from="PathTimer" to="." method="_on_path_timer_path_timer"]
[connection signal="timeout" from="PathTimer" to="PathTimer" method="_on_timeout"]
